<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tannt275.reuseactionbrain.ui.fragment.tutorial.FirstFragment">

    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/first_fragment_normalMode"
            style="@style/MainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/main_normal_mode" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/first_fragment_timedMode"
            style="@style/MainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/main_timed_mode" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/layoutButton"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@mipmap/popup_top"
        android:paddingBottom="20dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/popup_title_top" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutButton"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@mipmap/popup_bottom"
        android:paddingBottom="10dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/popup_title_bottom" />
    </RelativeLayout>
</RelativeLayout>
