<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_background_aqua"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        style="@style/TextAppearance.AppCompat.Display1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/dialog_add_name_title"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/dialog_add_name_message"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/dialog_add_name_message"
        android:textColor="@android:color/white" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_add_name_layoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/dialog_add_nameEdt"
            style="@style/Base.Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/dialog_add_name_hint"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/dialog_add_name_cancelBtn"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dialog_add_name_agreeBtn"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Agree"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>